# rund

./: .gitignore  Cargo.toml  README.md  build.bat  config.toml
.github/workflows/: build.yml  release.yml
src/: main.rs
